Update code to work with JDK 19 (half way through Vulkan.java).